init: 초기세팅 prettier, stylelint, tsconfig

--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:css": "stylelint './src/**/*.{ts,tsx}'"
   },
   "dependencies": {
+    "@stylelint/postcss-css-in-js": "^0.38.0",
+    "@types/styled-components": "^5.1.26",
+    "postcss-syntax": "^0.36.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "stylelint-config-recommended": "^12.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
