--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "printWidth": 100,
   "tabWidth": 2,
   "singleQuote": true,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "bracketSpacing": true,
   "semi": true,
   "useTabs": false,
