--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stylelint/postcss-css-in-js": "^0.38.0",
     "@types/styled-components": "^5.1.26",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "postcss-syntax": "^0.36.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
