--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   },
   "dependencies": {
     "@stylelint/postcss-css-in-js": "^0.38.0",
-    "@types/styled-components": "^5.1.26",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "axios": "^1.4.0",
     "postcss-syntax": "^0.36.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,13 +23,18 @@
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.43.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "prettier-plugin-style-order": "^0.2.2",
+    "styled-components": "^6.0.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
