--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "stylelint-processor-styled-components": "^1.10.0"
   },
   "devDependencies": {
+    "@types/node": "^20.3.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
