--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "prettier-plugin-style-order": "^0.2.2",
     "styled-components": "^6.0.1",
+    "styled-components.macro": "^1.0.0",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-babel-macros": "^1.0.6"
   }
 }
