--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "lint:css": "stylelint './src/**/*.{ts,tsx}'"
   },
   "dependencies": {
-    "@mobiscroll/cli": "^1.12.0",
-    "@mobiscroll/react-lite": "^4.10.9",
     "axios": "^1.4.0",
     "postcss-syntax": "^0.36.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
     "react-time-picker": "^6.2.0",
     "styled-reset": "^4.5.1"
   },
