--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-time-picker": "^6.2.0",
-    "styled-reset": "^4.5.1"
+    "styled-reset": "^4.5.1",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@stylelint/postcss-css-in-js": "^0.38.0",
