--- a/.github/workflows/pr-size-labeler.yml
+++ b/.github/workflows/pr-size-labeler.yml
@@ -7,20 +7,21 @@ jobs:
     runs-on: ubuntu-latest
     name: Label the PR size
     steps:
-      - uses: codelytv/pr-size-labeler@v1
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          xs_label: 'size/XS'
-          xs_max_size: '10'
-          s_label: 'size/S'
-          s_max_size: '100'
-          m_label: 'size/M'
-          m_max_size: '500'
-          l_label: 'size/L'
-          l_max_size: '1000'
-          xl_label: 'size/XL'
-          fail_if_xl: 'false'
-          message_if_xl: >
-            1000줄 이상이 변경되었네요! PR 사이즈를 좀 더 세분화해보면 어때요?
-          github_api_url: 'api.github.com'
-          files_to_ignore: 'package-lock.json *.lock'
+    - name: Pull Request size labeler
+      uses: CodelyTV/pr-size-labeler@v1
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        xs_label: 'size/XS'
+        xs_max_size: '10'
+        s_label: 'size/S'
+        s_max_size: '100'
+        m_label: 'size/M'
+        m_max_size: '500'
+        l_label: 'size/L'
+        l_max_size: '1000'
+        xl_label: 'size/XL'
+        fail_if_xl: 'false'
+        message_if_xl: >
+          1000줄 이상이 변경되었네요! PR 사이즈를 좀 더 세분화해보면 어때요?
+        github_api_url: 'api.github.com'
+        files_to_ignore: 'package-lock.json *.lock'
