--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "axios": "^1.4.0",
     "postcss-syntax": "^0.36.2",
+    "prettier": "1.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-time-picker": "^6.2.0",
+    "react-router-dom": "6",
     "styled-reset": "^4.5.1",
     "vite-plugin-svgr": "^3.2.0"
   },
@@ -28,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.43.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -37,8 +39,7 @@
     "postcss": "^8.4.24",
     "prettier-plugin-style-order": "^0.2.2",
     "styled-components": "^6.0.1",
-    "styled-components.macro": "^1.0.0",
-    "stylelint": "^15.9.0",
+    "stylelint": "15.5.0",
     "stylelint-config-concentric-order": "^5.1.0",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-recommended": "^12.0.0",
