test: Text color props 추가 testing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "components/*": ["src/components/*"],
       "hooks/*": ["src/hooks/*"],
       "pages/*": ["src/pages/*"],
-      "assets/*": ["src/assets/*"]
+      "assets/*": ["src/assets/*"],
+      "styles/*": ["src/styles/*"]
     },
     "useDefineForClassFields": true,
     // "lib": ["ES2020", "DOM", "DOM.Iterable"],
