chore: arowParens prettier 적용

--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "semi": true,
   "useTabs": false,
   "endOfLine": "lf",
-  "bracketSameLine": false
+  "bracketSameLine": false,
+  "arrowParens": "always"
 }
