--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "1.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-date-picker": "^4.1.2",
     "react-router-dom": "6",
     "styled-reset": "^4.5.1",
     "vite-plugin-svgr": "^3.2.0"
