--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "html2canvas": "^1.4.1",
     "postcss-syntax": "^0.36.2",
     "prettier": "1.13",
     "react": "^18.2.0",
