--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-multi-date-picker": "^4.1.2",
     "react-router-dom": "6",
+    "recoil": "^0.7.7",
     "styled-reset": "^4.5.1",
     "vite-plugin-svgr": "^3.2.0"
   },
