--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss-syntax": "^0.36.2",
     "prettier": "1.13",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
     "react-router-dom": "6",
