--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "prettier": "1.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-multi-date-picker": "^4.1.2",
     "react-error-boundary": "^4.0.10",
+    "react-multi-date-picker": "^4.1.2",
     "react-router-dom": "6",
     "recoil": "^0.7.7",
     "styled-reset": "^4.5.1",
     "swiper": "^10.0.4",
+    "uuid": "^9.0.0",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
