--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,8 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true, //console에서 경로 보이도록
     "noImplicitAny": true, // any타입 금지여부
