--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint:css": "stylelint './src/**/*.{ts,tsx}'"
   },
   "dependencies": {
-    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/axios": "^0.14.0",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "axios": "^1.4.0",
     "copy-text-to-clipboard": "^3.2.0",
     "html2canvas": "^1.4.1",
@@ -24,6 +24,7 @@
     "react-error-boundary": "^4.0.10",
     "react-multi-date-picker": "^4.1.2",
     "react-router-dom": "6",
+    "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "styled-reset": "^4.5.1",
     "swiper": "^10.0.4",
