--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,7 +46,9 @@
         "pathGroups": [
           //react 컴포넌트가 builtin 뒤에 (external import 앞에 나오도록 설정)
           { "pattern": "react", "group": "builtin", "position": "after" },
-          { "pattern": "react-dom", "group": "builtin", "position": "after" }
+          { "pattern": "react-dom", "group": "builtin", "position": "after" },
+          { "pattern": "./**", "group": "internal" }, // './'로 시작하는 상대 경로 파일은 internal 그룹에 속하도록 설정
+          { "pattern": "../**", "group": "internal", "position": "after" } // '../'로 시작하는 상위 경로 파일은 internal그룹 이후에 나타나도록
         ],
         "pathGroupsExcludedImportTypes": ["react", "react-dom"], //pathGroups가 올바르게 적용하기 위해.. (확실치 않음)
         "alphabetize": {
