fix: 인터페이스에서는 no-unused-value lint error가 발생하지않도록 수정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
 
     "no-duplicate-imports": "error", //중복 Import 안돼
     "no-console": ["warn", { "allow": ["warn", "error", "info"] }], //콘솔은 확인 뒤 지우기
-    "no-unused-vars": "error", //사용하지 않은 변수면 없애기
+    "no-unused-vars": "off", //사용하지 않은 변수면 없애기
+    "@typescript-eslint/no-unused-vars": ["error"], //사용하지 않은 변수면 없애기
     "no-multiple-empty-lines": "error", //공백 금지
     "no-undef": "error", //정의 안 한 변수 사용 x
     "indent": "off", // 프리티어 충돌로 인한 OFF
