chore: deploy 트리거 pr에서 commit으로

--- a/.github/workflows /deploy.yml
+++ b/.github/workflows /deploy.yml
@@ -1,8 +1,8 @@
 name: PR into main to deploy to vercel
 
 on:
-  pull_request:
-    branches: [ main ]
+  push:
+    branches: [ "main" ]
 
 
 jobs:
