--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,12 +19,12 @@ jobs:
         id: push_directory
         uses: cpina/github-action-push-to-another-repository@main
         env:
-          API_TOKEN_GITHUB: ${{ secrets.AUTO_ACTIONS }} // 변경
+          API_TOKEN_GITHUB: ${{ secrets.AUTO_ACTIONS }} 
         with:
           source-directory: 'output'
-          destination-github-username: ljh0508
+          destination-github-username: ljh0608
           destination-repository-name: ASAP_Client
-          user-email: ${{ secrets.LEAD_EMAIL }} // 변경
+          user-email: ${{ secrets.LEAD_EMAIL }}
           commit-message: ${{ github.event.commits[0].message }}
           target-branch: main
       - name: Test get variable exported by push-to-another-repository
