--- a/.github/workflows/prBuildCI.yml
+++ b/.github/workflows/prBuildCI.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   pull_request:
-    branches: ['main']
+    branches: ['main', "develop"]
   push:
     branches: [ "main" ]
     
@@ -45,26 +45,3 @@ jobs:
                state: 'closed'
               })
 
-  push_main:
-    runs-on: ubuntu-latest
-    container: pandoc/latex
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install mustache (to update the date)
-        run: apk add ruby && gem install mustache
-      - name: creates output
-        run: sh ./build.sh
-      - name: Pushes to another repository
-        id: push_directory
-        uses: cpina/github-action-push-to-another-repository@main
-        env:
-          API_TOKEN_GITHUB: ${{ secrets.AUTO_ACTIONS }} 
-        with:
-          source-directory: 'output'
-          destination-github-username: ljh0608
-          destination-repository-name: ASAP_Client
-          user-email: ${{ secrets.LEAD_EMAIL }}
-          commit-message: ${{ github.event.commits[0].message }}
-          target-branch: main
-      - name: Test get variable exported by push-to-another-repository
-        run: echo $DESTINATION_CLONED_DIRECTORY
