--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:css": "stylelint './src/**/*.{ts,tsx}'"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@tanstack/react-query": "^5.45.1",
     "@tanstack/react-query-devtools": "^5.45.1",
     "@types/axios": "^0.14.0",
