test: webshare test 종료후 원래 workflow로 돌리기

--- a/.github/workflows/push-buildRepo.yml
+++ b/.github/workflows/push-buildRepo.yml
@@ -1,8 +1,8 @@
-name: Push Main
+name: Push Main 
 
 on:
   push:
-    branches: [ "main", "feat/#325/webShareAPI" ]
+    branches: [ "main" ]
  
 jobs:
   push_main:
