--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "copy-text-to-clipboard": "^3.2.0",
     "html2canvas": "^1.4.1",
+    "ismobilejs": "^1.1.1",
     "postcss-syntax": "^0.36.2",
     "prettier": "1.13",
     "react": "^18.2.0",
